--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,13 @@
 	<name>api</name>
 	<description>Api for Niajobot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>9</java.version>
+		<maven.compiler.source>1.9</maven.compiler.source>
+		<maven.compiler.target>1.9</maven.compiler.target>
 		<spring-cloud-gcp.version>2.0.0</spring-cloud-gcp.version>
 		<spring-cloud.version>2020.0.2</spring-cloud.version>
 		<spring-native.version>0.9.1</spring-native.version>
+		<appengine-maven.version>1.3.2</appengine-maven.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -32,11 +35,11 @@
 			<groupId>com.google.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.experimental</groupId>
-			<artifactId>spring-native</artifactId>
-			<version>${spring-native.version}</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.experimental</groupId>-->
+<!--			<artifactId>spring-native</artifactId>-->
+<!--			<version>${spring-native.version}</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -93,24 +96,29 @@
 					</image>
 				</configuration>
 			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.springframework.experimental</groupId>-->
+<!--				<artifactId>spring-aot-maven-plugin</artifactId>-->
+<!--				<version>${spring-native.version}</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>test-generate</id>-->
+<!--						<goals>-->
+<!--							<goal>test-generate</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--					<execution>-->
+<!--						<id>generate</id>-->
+<!--						<goals>-->
+<!--							<goal>generate</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 			<plugin>
-				<groupId>org.springframework.experimental</groupId>
-				<artifactId>spring-aot-maven-plugin</artifactId>
-				<version>${spring-native.version}</version>
-				<executions>
-					<execution>
-						<id>test-generate</id>
-						<goals>
-							<goal>test-generate</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>generate</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>${appengine-maven.version}</version>
 			</plugin>
 		</plugins>
 	</build>
